# JIM-Immobilized-Microscopy-Suite

./: .readthedocs.yaml  README.md
BLTiffIO/: BLTiffIO.h  stdafx.cpp  (+4 more)
Jim_v8/Source_Code/: CMakeLists.txt  INTERFACE_USAGE.md  Matlab_Mex_Compilation_Code.m
Jim_v8/Source_Code/Align_Channels/: Align_Channels_Function.cpp  Main.cpp  driftCorrect.cpp  writeChannelAlignment.hpp
Jim_v8/Source_Code/Align_Channels/Command_Line/: Main.cpp
Jim_v8/Source_Code/Align_Channels/Matlab/: Align_Channels.cpp
Jim_v8/Source_Code/Bleach_Correct/: Bleach_Correct_Function.cpp  NNLS.cpp
Jim_v8/Source_Code/Bleach_Correct/Command_Line/: Main.cpp
Jim_v8/Source_Code/Bleach_Correct/Matlab/: Bleach_Correct.cpp
Jim_v8/Source_Code/Calculate_Traces/: Calculate_Traces_Function.cpp  Main.cpp
Jim_v8/Source_Code/Calculate_Traces/Command_Line/: Main.cpp
Jim_v8/Source_Code/Calculate_Traces/Matlab/: Calculate_Traces.cpp
Jim_v8/Source_Code/Detect_Particles/: AnalysisFunctions.cpp  Detect_Particles_Function.cpp  Main.cpp  Number_Image.cpp
Jim_v8/Source_Code/Detect_Particles/Command_Line/: Main.cpp
Jim_v8/Source_Code/Detect_Particles/Matlab/: Detect_Particles.cpp
Jim_v8/Source_Code/Expand_Shapes/: Expand_Shapes_Function.cpp  Main.cpp
Jim_v8/Source_Code/Expand_Shapes/Command_Line/: Main.cpp
Jim_v8/Source_Code/Expand_Shapes/Matlab/: Expand_Shape.cpp
Jim_v8/Source_Code/Header_Libraries/: BLCSVIO.h  BLFlagParser.h  BLImageTransform.h  BLMatlabParser.h  BLTiffIO.h  JIMParams.h
Jim_v8/Source_Code/Isolate_Particle/: Isolate_Particle_Function.cpp  Main.cpp
Jim_v8/Source_Code/Isolate_Particle/Command_Line/: Main.cpp
Jim_v8/Source_Code/Isolate_Particle/Matlab/: Isolate_Particle.cpp
Jim_v8/Source_Code/Mean_of_Frames/: Main.cpp  Mean_of_Frames_Function.cpp
Jim_v8/Source_Code/Mean_of_Frames/Command_Line/: Main.cpp
Jim_v8/Source_Code/Picasso_Raw_Converter/: Main.cpp  Picasso_Raw_Converter_Function.cpp
Jim_v8/Source_Code/Step_Fitting/: Aggarwal.cpp  AutoStepFit.cpp  Change_Point_Analysis.cpp  FindStep.cpp  Main.cpp  Stasi.cpp  Step_Fitting_Function.cpp  approxNoiseStdDev.cpp  findStepHeader.hpp
Jim_v8/Source_Code/Tiff_Channel_Splitter/: Main.cpp  Orientate_Images.cpp  Read_Micromanager_Metadata.cpp  Tiff_Channel_Splitter_Function.cpp
(+855 files in other folders)
